
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef unsigned int u_long ;
struct hostent {int h_length; int h_addr; } ;


 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int herror (char*) ;
 unsigned int inet_addr (char*) ;
 int memcpy (unsigned int*,int ,int ) ;

unsigned int resolve(char *hostname)
{
 u_long ip = 0;
 struct hostent *hoste;

 if ((int)(ip = inet_addr(hostname)) == -1)
 {
  if ((hoste = gethostbyname(hostname)) == ((void*)0))
  {
   herror("[!] gethostbyname");
   exit(-1);
  }
  memcpy(&ip, hoste->h_addr, hoste->h_length);
 }
 return(ip);
}
